ci: add post-publish smoke test + bump-version script
- Smoke test: npm install + mdxport --version after publish
- scripts/bump-version.sh: single command to update all version references
- Bump to 0.2.4

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,6 +114,25 @@ jobs:
           cat package.json
           npm publish --access public
 
+      - name: Smoke test (npm install + version check)
+        run: |
+          VERSION=$(grep '^version' Cargo.toml | head -1 | sed 's/.*"\(.*\)"/\1/')
+          echo "Expected version: ${VERSION}"
+
+          # Wait for npm registry to propagate
+          sleep 10
+
+          npm install -g @mdxport/cli@${VERSION}
+          ACTUAL=$(mdxport --version 2>&1)
+          echo "Got: ${ACTUAL}"
+
+          if echo "${ACTUAL}" | grep -q "${VERSION}"; then
+            echo "Smoke test passed"
+          else
+            echo "::error::Smoke test failed: expected version ${VERSION}, got: ${ACTUAL}"
+            exit 1
+          fi
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
