--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdxport"
-version = "0.2.6"
+version = "0.2.7"
 edition = "2024"
 description = "Markdown to PDF via Typst — comrak AST, in-process compilation, LaTeX math support"
 license = "MIT"
@@ -21,7 +21,7 @@ required-features = ["cli"]
 
 [features]
 default = ["cli"]
-cli = ["dep:clap", "dep:notify", "dep:reqwest"]
+cli = ["dep:clap", "dep:notify", "dep:reqwest", "dep:atty"]
 
 [dependencies]
 comrak = "0.35"
@@ -38,5 +38,6 @@ tex2typst-rs = "0.4.1"
 clap = { version = "4.5", features = ["derive"], optional = true }
 notify = { version = "8.0", optional = true }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
+atty = { version = "0.2", optional = true }
 
 [dev-dependencies]
