--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -158,6 +158,11 @@ jobs:
             exit 1
           fi
 
+      - name: Publish to crates.io
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish --no-verify
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
